--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,8 @@
       <header class="header">
         <div class="container">
           <div class="header__menu">
-            <div class="header__menu-logo"><a href="#"><img class="logo__image" src="../images/img-logo.png"></a></div><i class="fa fa-bars header__toggle-menu"></i>
+            <div class="header__menu-logo"><a href="#"><img class="logo__image" src="../images/img-logo.png"></a></div>
+            <button class="header__toggle-menu hamburger"><span class="bar"></span></button>
             <ul class="header__menu-list">
               <li class="list__item"><a class="list__item-link" href="#">Home</a></li>
               <li class="list__item"><a class="list__item-link" href="#">Pages</a></li>
@@ -179,6 +180,15 @@
       <section class="quote pt-10">
         <div class="container">
           <div class="quote__inner">
+            <div class="quote__content pb-10">
+              <p class="quote__content-title mb-4">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standvived nonturiIpsum passages, and more recently with "</p><span class="quote__content-author">Michael Hopkins</span>
+            </div>
+            <div class="quote__content pb-10">
+              <p class="quote__content-title mb-4">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standvived nonturiIpsum passages, and more recently with "</p><span class="quote__content-author">Michael Hopkins</span>
+            </div>
+            <div class="quote__content pb-10">
+              <p class="quote__content-title mb-4">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standvived nonturiIpsum passages, and more recently with "</p><span class="quote__content-author">Michael Hopkins</span>
+            </div>
             <div class="quote__content pb-10">
               <p class="quote__content-title mb-4">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standvived nonturiIpsum passages, and more recently with "</p><span class="quote__content-author">Michael Hopkins</span>
             </div>
