--- a/public/index.html
+++ b/public/index.html
@@ -119,9 +119,9 @@
           <div class="work__video"><img class="work__video-image" src="https://images.unsplash.com/photo-1484417894907-623942c8ee29?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1489&amp;q=80"><i class="fa fa-play work__video-icon"></i></div>
         </div>
       </section>
-      <section class="list pt-10 pb-10">
+      <section class="list pt-10 pb-4">
         <div class="container">
-          <div class="list_inner">
+          <div class="list__inner">
             <div class="list__menu">
               <div class="list__menu-item"><img class="list__menu-image mb-3" src="../images/img-list-icon1.png">
                 <div class="list__content">
@@ -147,8 +147,6 @@
                   <div class="list__content-desc">Be set fourth land god darkness  make it wherein own</div>
                 </div>
               </div>
-            </div>
-            <div class="list__menu">
               <div class="list__menu-item"><img class="list__menu-image mb-3" src="../images/img-list-icon5.png">
                 <div class="list__content">
                   <div class="list__content-title mb-2">ui / ux design</div>
