fix block galary

--- a/public/index.html
+++ b/public/index.html
@@ -98,14 +98,14 @@
       </section>
       <section class="galary">
         <div class="galary__list">
-          <div class="galary__list-item"><img src="../images/img-galary1.png"></div>
-          <div class="galary__list-item"><img src="../images/img-galary2.png"></div>
-          <div class="galary__list-item"><img src="../images/img-galary3.png"></div>
-          <div class="galary__list-item"><img src="../images/img-galary4.png"></div>
-          <div class="galary__list-item"><img src="../images/img-galary5.png"></div>
-          <div class="galary__list-item"><img src="../images/img-galary6.png"></div>
-          <div class="galary__list-item"><img src="../images/img-galary1.png"></div>
-          <div class="galary__list-item"><img src="../images/img-galary7.png"></div>
+          <div class="galary__list-item"><img class="galary__list-image" src="https://images.unsplash.com/photo-1628370678552-207f6c2c033c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=634&amp;q=80"></div>
+          <div class="galary__list-item"><img class="galary__list-image" src="https://images.unsplash.com/photo-1628182997887-1fb3d8c208b2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1546&amp;q=80"></div>
+          <div class="galary__list-item"><img class="galary__list-image" src="https://images.unsplash.com/photo-1628330565454-aa57f15ef3ee?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=700&amp;q=80"></div>
+          <div class="galary__list-item"><img class="galary__list-image" src="https://images.unsplash.com/photo-1628359220811-10df98e31cca?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1502&amp;q=80"></div>
+          <div class="galary__list-item"><img class="galary__list-image" src="https://images.unsplash.com/photo-1628359363939-468016799633?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=639&amp;q=80"></div>
+          <div class="galary__list-item"><img class="galary__list-image" src="https://images.unsplash.com/photo-1628353921250-9867b0dfbca8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=634&amp;q=80"></div>
+          <div class="galary__list-item"><img class="galary__list-image" src="https://images.unsplash.com/photo-1628177028981-e4b198b80297?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1500&amp;q=80"></div>
+          <div class="galary__list-item"><img class="galary__list-image" src="https://images.unsplash.com/photo-1628350970664-176ff9d77e90?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=700&amp;q=80"></div>
         </div><a class="btn btn--gray galary__btn">Load More Work</a>
       </section>
       <section class="work mb-10">
