--- a/public/index.html
+++ b/public/index.html
@@ -245,22 +245,22 @@
             </div>
             <div class="footer__box">
               <ul class="footer__list">
-                <li class="footer__list-item"><a class="footer__list-link">Projects</a></li>
-                <li class="footer__list-item"><a class="footer__list-link">About</a></li>
-                <li class="footer__list-item"><a class="footer__list-link">Services</a></li>
-                <li class="footer__list-item"><a class="footer__list-link">Carreer</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Projects</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">About</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Services</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Carreer</a></li>
               </ul>
               <ul class="footer__list">
-                <li class="footer__list-item"><a class="footer__list-link">News</a></li>
-                <li class="footer__list-item"><a class="footer__list-link">Events</a></li>
-                <li class="footer__list-item"><a class="footer__list-link">Contact</a></li>
-                <li class="footer__list-item"><a class="footer__list-link">Legals</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">News</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Events</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Contact</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Legals</a></li>
               </ul>
               <ul class="footer__list">
-                <li class="footer__list-item"><a class="footer__list-link">Facebook</a></li>
-                <li class="footer__list-item"><a class="footer__list-link">twitter</a></li>
-                <li class="footer__list-item"><a class="footer__list-link">Instagram</a></li>
-                <li class="footer__list-item"><a class="footer__list-link">Dribbble</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Facebook</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">twitter</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Instagram</a></li>
+                <li class="footer__list-item"><a class="footer__list-link" href="#">Dribbble</a></li>
               </ul>
             </div>
           </div>
